# StunBeacon

./: Cargo.toml  Dockerfile  Dockerfile.ghcr  README.md
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs
tests/: api.rs
